tests/ui/reborrow/custom_marker_place_conflict_deref.stderr
error[E0502]: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/custom_marker_place_conflict_deref.rs:22:14
   |
LL |     let b: &() = &a;
   |                  -- immutable borrow occurs here
LL |     reborrow(a);
   |              ^ mutable borrow occurs here
LL |
LL |     let _ = b;
   |             - immutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
